--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   @apply w-40 h-12 border-2 border-neutral-300 rounded-2xl
  }
  .btn:disabled{
-  @apply border-neutral-500 text-neutral-400;
+  @apply bg-transparent border-neutral-500 text-neutral-400 pointer-events-none;
  }
  .autoheight{
   min-height: 40rem;
